# gallery

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml  requests.http  tailwind.config.js
alembic/: env.py
alembic/versions/: 34aa2cc482b1_rename_tags_to_category.py  46aee3cb88f0_create_user_table.py  abae3b9f8a06_create_image_table.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Navbar.tsx
frontend/src/pages/home/: Home.tsx
frontend/src/pages/login/: Login.tsx
gallery/: api.py  auth.py  config.py  db.py  dto.py  service.py  templates.py
locales/: base.pot
locales/de/LC_MESSAGES/: base.mo  base.po
locales/en/LC_MESSAGES/: base.mo  base.po
static/css/: styles.css
templates/: add_image.html.jinja  edit_image.html.jinja  home.html.jinja  login.html.jinja
templates/layout/: default.html.jinja
tests/: conftest.py  test_api.py
