[project]
name = "gallery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "fastapi[standard]>=0.115.11",
    "jinja2>=3.1.5",
    "psycopg[binary,pool]>=3.2.5",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
