[project]
name = "gallery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "argon2-cffi>=23.1.0",
    "fastapi[standard]>=0.115.11",
    "isort>=6.0.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "pillow>=11.1.0",
    "psycopg[binary,pool]>=3.2.5",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
